# KINETIC

./: .env.example  .gitignore  .vercelignore  BUTTONS_FIXED.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  FEATURES.md  FIXES_APPLIED.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  ORGANISATIONS_FEATURE.md  PROJECT_STRUCTURE.md  PROJECT_SUBMISSION.md  QUICKSTART_ORGANISATIONS.md  QUICKSTART_WEB.md  README.md  REAL_WALLET_INTEGRATION.md  SETUP_COMPLETE.md  START_APP.md  STYLING_FIX_SUMMARY.md  VERCEL_DEPLOYMENT.md  VERIFICATION_CHECKLIST.md  WALLET_FIX.md  WALLET_TROUBLESHOOTING.md  balances.txt  check_bals.py  deploy-vercel.ps1  deploy_out.txt  docker-compose.yml  out.txt  pyproject.toml  python3.cmd  requirements.txt  run_out.txt  setup.ps1  setup.sh  (+6 more)
agent/: __init__.py  consumer_agent.py  job_matcher.py  orchestrator.py  settings.json  verifier.py  wallet.py
api/: __init__.py  agent_bridge.py  heartbeat.py  hub.py  index.py  job_history.py  job_runner.py  main.py  orgs.py  payment_verifier.py  proof_system.py  realtime.py  roadmap_store.py  wallet_utils.py  x402_middleware.py
contracts/: badge.py  deploy.py  escrow.py  org_registry.py  registry.py
docs/: DEPLOYMENT.md  EVALUATION_REPORT.md  PROOF_SYSTEM.md  QUICKSTART.md  QUICK_REFERENCE.md  REALTIME_IMPLEMENTATION.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: cross_chain_bridge.py  deploy_org_registry.py  fund_accounts.py  mint_badges.py  register_provider.py  (+2 more)
web/: README.md  (+20 more)
(+52 files in other folders)
